--- a/templates/bayya/register.html
+++ b/templates/bayya/register.html
@@ -82,10 +82,10 @@
     						<!-- Section Title Starts -->
     						<div class="row text-center">
     							<h2 class="title-head hidden-xs">get <span>started</span></h2>
-    							 <p class="info-form">Open account for free and start trading Bitcoins now!</p>
+   							 <p class="info-form" style="margin-bottom: 15px;">Open account for free and start trading Bitcoins now!</p>
     						</div>
     						<!-- Section Title Ends -->
-                <form method="POST">
+                <form id="my_form" data-validate-email-url="{% url 'bayya:signup' %}" method="POST">
                   {% csrf_token %}
 
                   {% if form.non_field_errors %}
@@ -93,6 +93,7 @@
                       {% for error in form.non_field_errors %}
                       <li> {{ error }} </li>
                       {% endfor %}
+                      
                   </ul>
                   {% endif %}
 
@@ -115,11 +116,23 @@
         							<!-- Input Field Ends -->
         							<!-- Input Field Starts -->
         							<div class="form-group {% if form.password1.error %}alert alert-danger {% endif %}">
-                          {{ form.password1 }}
+                          {{ userProfileForm.phone_number }}
         							</div>
         							<!-- Input Field Ends -->
-        							<!-- Input Field Starts -->
+        							
+                      <!-- Input Field Ends -->
+                      <!-- Input Field Starts -->
         							<div class="form-group {% if form.password2.error %}alert alert-danger {% endif %}">
+                        {{ userProfileForm.referers_email }}
+        							</div>
+                      <!-- Input Field Ends -->
+                      <!-- Input Field Starts -->
+        							<div class="form-group">
+                        {{ form.password1 }}
+        							</div>
+        							<!-- Input Field Ends -->
+                      <!-- Input Field Starts -->
+        							<div class="form-group">
                         {{ form.password2 }}
         							</div>
         							<!-- Input Field Ends -->
@@ -136,17 +149,26 @@
         							</div>
                       <!-- Input Field Ends -->
                       <!-- Input Field Starts -->
+        							<div class="form-group {% if form.password2.error %}alert alert-danger {% endif %}">
+                        {{ userProfileForm.bitcoin_add_or_bank_acct }}
+        							</div>
+                      <!-- Input Field Starts -->
         							<div class="form-group">
-                        {{ form.country }}
+                        {{ userProfileForm.bank_name }}
                       </div>
                       <!-- Input Field Ends -->
+                      <!-- Input Field Starts -->
+        							<div class="form-group">
+                        {{ form.country }}
+        							</div>
+        							<!-- Input Field Ends -->
                     </div>
 
                   </div>
 
     							<!-- Submit Form Button Starts -->
     							<div class="form-group">
-    								<button class="btn btn-primary" type="submit">create account</button>
+    								<button class="btn btn-primary" id='submit' type="submit">create account</button>
     								<p class="text-center">already have an account ? <a href="{% url 'bayya:login' %}">Login</a>
     							</div>
     							<!-- Submit Form Button Ends -->
@@ -169,7 +191,8 @@
 
   		<!-- Live Style Switcher JS File - only demo -->
       <script src="{% static 'js/styleswitcher.js' %}"></script>
-        <script src="{% static 'js/forms.js' %}"></script>
+      <script src="{% static 'js/forms.js' %}"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 
     </div>
     <!-- Wrapper Ends -->
